# notes

./: .buildinfo  .commands.sh.swp  .gitignore  404.html  Dockerfile  Quantized Training of GBDT.md  README.md  _404.html  applied-data-science.business-application-of-ai.json  applied-data-science.data-analysis.json  applied-data-science.data-management.json  applied-data-science.decision-focused-learning.index.json  applied-data-science.decision-focused-learning.introduction.json  applied-data-science.marketing.lead-scoring.json  applied-data-science.marketing.marketing.json  applied-data-science.type-of-applications.json  bayes_for_economics.html  business.accounting.json  business.breakeven-point.json  business.business-administration.causal-process-tracing.json  business.business-administration.competitive-strategy.competition-under-uncertainty.json  business.business-administration.competitive-strategy.hypercompetition.json  business.business-administration.competitive-strategy.index.json  business.business-administration.competitive-strategy.moat.json  business.business-administration.competitive-strategy.scp-rbv.json  business.business-administration.concepts.json  business.business-administration.frame-works.json  business.business-administration.history.json  business.business-administration.index.json  business.business-administration.introduction.json  business.career-of-ds.json  business.digital-transformation.json  business.feature-vector-based.json  business.real-estate.index.json  business.real-estate.real-estate-industry.json  business.revenue-structure.json  (+818 more)
(+3394 files in other folders)
