[project]
name = "notes"
version = "0.1.0"
description = "my notebook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "austen-plots>=0.1.0",
    "causallib>=0.10.0",
    "cvxpy>=1.7.3",
    "doubleml>=0.8.2",
    "factor-analyzer>=0.5.1",
    "gensim>=4.3.2",
    "graphviz>=0.21",
    "great-tables>=0.18.0",
    "japanize-matplotlib>=1.1.3",
    "lightgbm>=4.6.0",
    "linearmodels>=6.1",
    "lingam>=1.11.0",
    "matplotlib==3.7.0",
    "matplotlib-fontja>=1.1.0",
    "munkres>=1.1.4",
    "nest-asyncio>=1.6.0",
    "ngboost>=0.5.6",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "ordinalcorr>=0.7.0",
    "pandas>=2.0.0",
    "pgmpy>=1.0.0",
    "pymc>=5.25.1",
    "pysensemakr>=0.0.8",
    "pystan>=3.5.0",
    "rapidfuzz>=3.14.1",
    "rdrobust>=1.1.1",
    "scikit-learn>=1.3.1",
    "scikit-surprise>=1.1.4",
    "scikit-survival>=0.23.0",
    "seaborn>=0.11.2",
    "semopy>=2.3.10",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.5",
    "tabpfn>=2.2.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tree-influence>=0.1.7",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "jupyter-book>=1.0.4.post1",
    "jupyter-copilot>=0.1.5",
    "jupyterlab<4.0.0",
    "jupyterlab-lsp>=4.3.0",
    "pyyaml>=6.0.3",
]
